--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <p class="deepinfo1">IDD_ROOT<p class="dot">:</p></p>
                     <p class="deepinfo2">+9</p>
                    </div>
-                   <div class="box IDD_SUFIXES">
+                   <div class="box1 IDD_SUFIXES">
                      <p class="deepinfo1">
                        IDD_SUFIXES<p class="dot">:</p>
                      </p>
